# sk-server

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: vibrate.py
app/core/: config.py  db.py
app/dao/: algorithm_job.py
app/models/: __init__.py  algorithm_job.py
app/serve/: vibrate.py
config/: config.yaml
