[project]
name = "sk-server"
version = "0.1.0"
description = "scikit-learn server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "ray[serve]>=2.44.1",
    "scikit-learn>=1.6.1",
    "sqlmodel>=0.0.24",
]
